<resources>
    <string name="app_name">AppPrilogenia</string>
    <string name="my_awesome_quiz">My Awesome Quiz</string>
    <string name="start">Start</string>
    <string name="highscore_0">Highscore:0</string>
    <string name="score_0">Score: 0</string>
    <string name="question_1_x">Question: 1/X</string>
    <string name="_00_30">00:30</string>
    <string name="option_1">Option 1</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="here_will_be_the_question_text">Here will be the question text  \n Here will be the question text \n  Here will be the question text</string>
    <string name="btn_confirm">Confirm</string>
    <string name="foto2">foto2</string>
    <string name="foto1">foto1</string>
</resources>
