<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon1"
    android:padding="16dp"
    tools:context=".StartingScreenActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/my_awesome_quiz"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <ImageView
        android:background="@drawable/logoNew"
        android:layout_marginBottom="35dp"
android:layout_centerHorizontal="true"
        android:layout_above="@+id/text_view_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_start_quiz"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/highscore_0"
        android:textSize="20sp" />


    <Button
        android:id="@+id/button_start_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/style_button_on_and_press"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:text="@string/start"
        android:textColor="@color/colorTextButtonWhite"
        android:textSize="18sp" />


</RelativeLayout>